[package]
name = "zcore-loader"
version = "0.1.0"
authors = [
    "Runji Wang <wangrunji0408@163.com>",
    "Yuekai Jia <equation618@gmail.com>",
]
edition = "2018"
description = "Linux and Zircon user programs loader and runner."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cfg-if = "1.0"
xmas-elf = { version = "0.7", optional = true }
kernel-hal = { git = "https://github.com/kern-crates/zcore-kernel-hal.git", rev = "9f880544", default-features = false }
zircon-object = { git = "https://github.com/kern-crates/zcore-zircon-object.git", rev = "b2d6cd0d", features = ["elf"] }
linux-object = { git = "https://github.com/kern-crates/zcore-linux-object.git", rev = "9519c6dc", optional = true }
zircon-syscall = { git = "https://github.com/kern-crates/zcore-zircon-syscall.git", rev = "2b27cc29", optional = true }
linux-syscall = { git = "https://github.com/kern-crates/zcore-linux-syscall.git", rev = "f1bb4d5f", optional = true }
executor = { git = "https://github.com/DeathWish5/PreemptiveScheduler", rev = "e8cd353" }

[features]
default = ["libos", "linux", "zircon"]
linux = ["linux-object", "linux-syscall"]
zircon = ["zircon-syscall", "xmas-elf"]
libos = ["kernel-hal/libos", "zircon-object/aspace-separate"]

[dev-dependencies]
env_logger = "0.9"
async-std = { version = "1.10", features = ["attributes"] }
rcore-fs-hostfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }

[[example]]
name = "linux-libos"
required-features = ["linux", "libos"]

[[example]]
name = "zircon-libos"
required-features = ["zircon", "libos"]
