[package]
name = "zcore-loader"
version = "0.1.0"
authors = [
    "Runji Wang <wangrunji0408@163.com>",
    "Yuekai Jia <equation618@gmail.com>",
]
edition = "2018"
description = "Linux and Zircon user programs loader and runner."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cfg-if = "1.0"
xmas-elf = { version = "0.7", optional = true }
kernel-hal = { git = "https://github.com/kern-crates/zcore-kernel-hal.git", rev = "eae409f2", default-features = false }
zircon-object = { git = "https://github.com/kern-crates/zcore-zircon-object.git", rev = "178cc554", features = ["elf"] }
linux-object = { git = "https://github.com/kern-crates/zcore-linux-object.git", rev = "1304b7e1", optional = true }
zircon-syscall = { git = "https://github.com/kern-crates/zcore-zircon-syscall.git", rev = "83907130", optional = true }
linux-syscall = { git = "https://github.com/kern-crates/zcore-linux-syscall.git", rev = "06fb8490", optional = true }
executor = { git = "https://github.com/DeathWish5/PreemptiveScheduler", rev = "e8cd353" }

[features]
default = ["libos", "linux", "zircon"]
linux = ["linux-object", "linux-syscall"]
zircon = ["zircon-syscall", "xmas-elf"]
libos = ["kernel-hal/libos", "zircon-object/aspace-separate"]

[dev-dependencies]
env_logger = "0.9"
async-std = { version = "1.10", features = ["attributes"] }
rcore-fs-hostfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }

[[example]]
name = "linux-libos"
required-features = ["linux", "libos"]

[[example]]
name = "zircon-libos"
required-features = ["zircon", "libos"]
